# airflow-metrics-gbq

./: .flake8  .gitignore  .pre-commit-config.yaml  .pylintrc  CHANGELOG.md  LICENSE  README.md  pyproject.toml  requirements.dev.txt  requirements.txt  setup.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: SUPPORT_REQUEST.md
.github/workflows/: ci.yaml  release.yaml
airflow_metrics_gbq/: exceptions.py  metrics.py
airflow_metrics_gbq/utils/: __init__.py
scripts/load/: load_test_socket.py
scripts/sql/: create_monitoring_tables.sql  mat_views.sql  scheduled_cleanup.sql
src/: __init__.py  metrics.py
src/utils/: __init__.py  gbq_connector.py
tests/: conftest.py  test_socket_recv.py  test_utils.py
